Updating tests to use maven 3